--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -2,4 +2,6 @@ include: package:effective_dart/analysis_options.yaml
 
 linter:
   rules:
+    prefer_const_constructors: true
+    prefer_const_declarations: true
     public_member_api_docs: false
