--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,14 +9,14 @@ dependencies:
   flutter:
     sdk: flutter
   photo_manager: ^0.5.8
-  photo_view:
-    path: photo_view
-  effective_dart: ^1.2.0
+  photo_view: ^0.10.3
   cupertino_icons: ^1.0.0
+  fl_chart: ^0.12.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  effective_dart: ^1.3.0
 
 flutter:
   uses-material-design: true
